backend/output_backend.txt
cargo : warning: 
unused import: `crate
::pages::engine_cab_l
ayout::EngineCabLayou
t`
At line:1 char:1
+ cargo check 2>&1 | 
Out-File -Encoding 
utf8 
output_backend.txt
+ ~~~~~~~~~~~~~~~~
    + CategoryInfo   
           : NotSpe  
  cified: (warning   
 : unused...ngine    
CabLayout`:Strin    
g) [], RemoteExc    
eption
    + FullyQualified 
   ErrorId : Native  
  CommandError
 
  --> frontend\src\ap
p.rs:13:5
   |
13 | use crate::pages
::engine_cab_layout::
EngineCabLayout;
   |     ^^^^^^^^^^^^
^^^^^^^^^^^^^^^^^^^^^
^^^^^^^^^^^^^^^
   |
   = note: `#[warn(un
used_imports)]` 
(part of 
`#[warn(unused)]`) 
on by default

warning: unused 
import: `StoryNode`
 --> frontend\src\pag
es\play_mode.rs:2:34
  |
2 | use common::exper
t::{StoryGraph, 
StoryNode};
  |                  
                
^^^^^^^^^

warning: unused 
variable: `history`
  --> frontend\src\pa
ges\play_mode.rs:19:1
0
   |
19 |     let 
(history, 
set_history) = signal
(Vec::<String>::new()
); // Log of events
   |          
^^^^^^^ help: if 
this is intentional, 
prefix it with an 
underscore: 
`_history`
   |
   = note: `#[warn(un
used_variables)]` 
(part of 
`#[warn(unused)]`) 
on by default

warning: 
`ask_pete_frontend` 
(lib) generated 3 
warnings (run `cargo 
fix --lib -p 
ask_pete_frontend` 
to apply 2 
suggestions)
    Checking 
ask_pete_backend 
v0.1.0 (C:\Users\Trin
ity\Documents\daydrea
m\Day_Dream\backend)
error[E0063]: 
missing field 
`logic` in 
initializer of `commo
n::expert::StoryNode`
  --> backend\src\han
dlers\expert.rs:15:29
   |
15 |                 
nodes: vec![common::e
xpert::StoryNode {
   |                 
            ^^^^^^^^^
^^^^^^^^^^^^^^^^ 
missing `logic`

For more information 
about this error, 
try `rustc --explain 
E0063`.
error: could not 
compile 
`ask_pete_backend` 
(bin 
"ask_pete_backend") 
due to 1 previous 
error
